# formation_control

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: agent_initialization.yaml  config.rviz  ground_station_initialization.yaml  initialization.yaml  rosconsole_debug_enabled.conf
include/: agent_core.h  commons.h  ground_station_core.h  packet_manager_core.h  visualization_core.h
include/packet_manager/: c2000_type.h  packet_agent.h  packet_bs_telemetry.h  packet_car_telemetry.h  packet_ids.h  packet_manager.h
launch/: demo_5_agents.launch  demo_5_agents_random.launch  demo_8_agents.launch  demo_8_agents_and_1_real.launch  demo_9_agents.launch  single_agent.launch  test.launch  test_5_agents.launch
msg/: FormationStatistics.msg  FormationStatisticsArray.msg  FormationStatisticsStamped.msg
simulink/: agent_test_ST_impl.slx
src/: agent_core.cpp  agent_node.cpp  agent_test.cpp  ground_station_core.cpp  ground_station_test.cpp  packet_manager_core.cpp  packet_manager_node.cpp  packet_manager_test.cpp  visualization_core.cpp  visualization_node.cpp
src/packet_manager/: packet_agent.c  packet_bs_telemetry.c  packet_car_telemetry.c  packet_manager.c
srv/: Sync.srv
