<package format="2">
  <name>agent_test</name>
  <version>0.0.1</version>
  <description>
    Agent Test
  </description>
  <author>Alessandro Tondo</author>
  <maintainer email="tondo.codes+ros@gmail.com">Alessandro Tondo</maintainer>
  <license>GNU GPL v3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>