<package format="2">
  <name>formation_control</name>
  <version>0.2.3</version>
  <description>
    Distributed Estimation and Control of Swarm Formation Statistics with Simulated Agents.
  </description>
  <author>Alessandro Tondo</author>
  <maintainer email="tondo.codes+ros@gmail.com">Alessandro Tondo</maintainer>
  <license>GNU GPL v3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>tf</depend>
  <depend>interactive_markers</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>